tests/samples/negative/generics/inference_failure.ax
module inference_failure;

fn make[T]() -> T {
    return 0;
}

fn main() -> i32 {
    let value = make();
    return value;
}
